@@ -113,6 +113,7 @@ bool runAllTests() {
      */
 
     // Utilities:
+    addNBitmask(runner);
     addNIndexedArray(runner);
     addNLargeInteger(runner);
     addNRational(runner);
